@@ -843,6 +843,34 @@
 			  <child>
 			    <widget class="GtkImage" id="image2671">
 			      <property name="visible">True</property>
+			      <property name="stock">gtk-index</property>
+			      <property name="icon_size">4</property>
+			      <property name="xalign">0.5</property>
+			      <property name="yalign">0.5</property>
+			      <property name="xpad">0</property>
+			      <property name="ypad">0</property>
+			    </widget>
+			  </child>
+			</widget>
+			<packing>
+			  <property name="padding">0</property>
+			  <property name="expand">False</property>
+			  <property name="fill">False</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkButton" id="fbutton2">
+			  <property name="visible">True</property>
+			  <property name="tooltip" translatable="yes">Remove selected event reference</property>
+			  <property name="can_focus">True</property>
+			  <property name="relief">GTK_RELIEF_NONE</property>
+			  <property name="focus_on_click">True</property>
+			  <signal name="clicked" handler="on_marriageDeleteBtn_clicked" object="marriageEventList"/>
+
+			  <child>
+			    <widget class="GtkImage" id="image2697">
+			      <property name="visible">True</property>
 			      <property name="stock">gtk-add</property>
 			      <property name="icon_size">1</property>
 			      <property name="xalign">0.5</property>
@@ -1100,6 +1128,34 @@
 
 			  <child>
 			    <widget class="GtkImage" id="image2670">
+			      <property name="visible">True</property>
+			      <property name="stock">gtk-index</property>
+			      <property name="icon_size">4</property>
+			      <property name="xalign">0.5</property>
+			      <property name="yalign">0.5</property>
+			      <property name="xpad">0</property>
+			      <property name="ypad">0</property>
+			    </widget>
+			  </child>
+			</widget>
+			<packing>
+			  <property name="padding">0</property>
+			  <property name="expand">False</property>
+			  <property name="fill">False</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkButton" id="mbutton2">
+			  <property name="visible">True</property>
+			  <property name="tooltip" translatable="yes">Remove selected event reference</property>
+			  <property name="can_focus">True</property>
+			  <property name="relief">GTK_RELIEF_NONE</property>
+			  <property name="focus_on_click">True</property>
+			  <signal name="clicked" handler="on_marriageDeleteBtn_clicked" object="marriageEventList"/>
+
+			  <child>
+			    <widget class="GtkImage" id="image2698">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-add</property>
 			      <property name="icon_size">1</property>
