@@ -1,3 +1,8 @@
+2006-04-27  Don Allingham  <don@gramps-project.org>
+	* src/Editors/_EditFamily.py: provide add new parent option
+	* src/Editors/_EditEvent.py: used set_window
+	* src/glade/gramps.glade: add new buttons for add new parent
+
 2006-04-27  Alex Roitman  <shura@gramps-project.org>
 	* src/plugins/CmdRef.py: Fix tool.
 	* src/PluginUtils/_PluginStatus.py: Fix wm.
